compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_7_function_blocks_generated_header_file.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: "&generated_header.get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef FUNCTION_BLOCKS
#define FUNCTION_BLOCKS

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct {
    uint64_t* __vtable;
    int16_t varInt;
    int16_t* outVarInt;
    int16_t* inOutVarInt;
} fbThatHasSimpleTypes_type;

void __fbThatHasSimpleTypes__init(fbThatHasSimpleTypes_type* self);

void fbThatHasSimpleTypes(fbThatHasSimpleTypes_type* self);

void fbThatHasSimpleTypes__FB_INIT(fbThatHasSimpleTypes_type* self);

void fbThatHasSimpleTypes__fbThatHasSimpleTypes_Action(fbThatHasSimpleTypes_type* self);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !FUNCTION_BLOCKS */
