compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_7_function_blocks_parsed_content.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: json
---
{
  "parsed_project": {
    "units": [
      {
        "global_vars": [],
        "var_config": [],
        "pous": [
          {
            "id": 2,
            "name": "fbThatHasSimpleTypes",
            "kind": "FunctionBlock",
            "variable_blocks": [
              {
                "access": "Protected",
                "constant": false,
                "retain": false,
                "variables": [
                  {
                    "name": "varInt",
                    "data_type_declaration": {
                      "Reference": {
                        "referenced_type": "INT",
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 3,
                                "column": 17,
                                "offset": 66
                              },
                              "end": {
                                "line": 3,
                                "column": 20,
                                "offset": 69
                              }
                            }
                          },
                          "file": {
                            "File": "function_blocks.pli"
                          }
                        }
                      }
                    },
                    "initializer": null,
                    "address": null,
                    "location": {
                      "span": {
                        "Range": {
                          "start": {
                            "line": 3,
                            "column": 8,
                            "offset": 57
                          },
                          "end": {
                            "line": 3,
                            "column": 14,
                            "offset": 63
                          }
                        }
                      },
                      "file": {
                        "File": "function_blocks.pli"
                      }
                    }
                  }
                ],
                "kind": "Local",
                "linkage": "Internal",
                "location": {
                  "span": {
                    "Range": {
                      "start": {
                        "line": 2,
                        "column": 4,
                        "offset": 45
                      },
                      "end": {
                        "line": 2,
                        "column": 7,
                        "offset": 48
                      }
                    }
                  },
                  "file": {
                    "File": "function_blocks.pli"
                  }
                }
              },
              {
                "access": "Protected",
                "constant": false,
                "retain": false,
                "variables": [
                  {
                    "name": "outVarInt",
                    "data_type_declaration": {
                      "Reference": {
                        "referenced_type": "INT",
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 6,
                                "column": 20,
                                "offset": 118
                              },
                              "end": {
                                "line": 6,
                                "column": 23,
                                "offset": 121
                              }
                            }
                          },
                          "file": {
                            "File": "function_blocks.pli"
                          }
                        }
                      }
                    },
                    "initializer": null,
                    "address": null,
                    "location": {
                      "span": {
                        "Range": {
                          "start": {
                            "line": 6,
                            "column": 8,
                            "offset": 106
                          },
                          "end": {
                            "line": 6,
                            "column": 17,
                            "offset": 115
                          }
                        }
                      },
                      "file": {
                        "File": "function_blocks.pli"
                      }
                    }
                  }
                ],
                "kind": "Output",
                "linkage": "Internal",
                "location": {
                  "span": {
                    "Range": {
                      "start": {
                        "line": 5,
                        "column": 4,
                        "offset": 87
                      },
                      "end": {
                        "line": 5,
                        "column": 14,
                        "offset": 97
                      }
                    }
                  },
                  "file": {
                    "File": "function_blocks.pli"
                  }
                }
              },
              {
                "access": "Protected",
                "constant": false,
                "retain": false,
                "variables": [
                  {
                    "name": "inOutVarInt",
                    "data_type_declaration": {
                      "Reference": {
                        "referenced_type": "INT",
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 9,
                                "column": 22,
                                "offset": 172
                              },
                              "end": {
                                "line": 9,
                                "column": 25,
                                "offset": 175
                              }
                            }
                          },
                          "file": {
                            "File": "function_blocks.pli"
                          }
                        }
                      }
                    },
                    "initializer": null,
                    "address": null,
                    "location": {
                      "span": {
                        "Range": {
                          "start": {
                            "line": 9,
                            "column": 8,
                            "offset": 158
                          },
                          "end": {
                            "line": 9,
                            "column": 19,
                            "offset": 169
                          }
                        }
                      },
                      "file": {
                        "File": "function_blocks.pli"
                      }
                    }
                  }
                ],
                "kind": "InOut",
                "linkage": "Internal",
                "location": {
                  "span": {
                    "Range": {
                      "start": {
                        "line": 8,
                        "column": 4,
                        "offset": 139
                      },
                      "end": {
                        "line": 8,
                        "column": 14,
                        "offset": 149
                      }
                    }
                  },
                  "file": {
                    "File": "function_blocks.pli"
                  }
                }
              }
            ],
            "return_type": null,
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 1,
                    "column": 4,
                    "offset": 5
                  },
                  "end": {
                    "line": 13,
                    "column": 22,
                    "offset": 253
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "name_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 1,
                    "column": 19,
                    "offset": 20
                  },
                  "end": {
                    "line": 1,
                    "column": 39,
                    "offset": 40
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "poly_mode": "None",
            "generics": [],
            "linkage": "Internal",
            "super_class": null,
            "is_const": false,
            "interfaces": [],
            "properties": []
          },
          {
            "id": 1,
            "name": "fbThatHasSimpleTypes.FB_INIT",
            "kind": {
              "Method": {
                "parent": "fbThatHasSimpleTypes",
                "property": null,
                "declaration_kind": "Concrete"
              }
            },
            "variable_blocks": [],
            "return_type": null,
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 11,
                    "column": 8,
                    "offset": 197
                  },
                  "end": {
                    "line": 12,
                    "column": 18,
                    "offset": 230
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "name_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 11,
                    "column": 15,
                    "offset": 204
                  },
                  "end": {
                    "line": 11,
                    "column": 22,
                    "offset": 211
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "poly_mode": "None",
            "generics": [],
            "linkage": "Internal",
            "super_class": null,
            "is_const": false,
            "interfaces": [],
            "properties": []
          }
        ],
        "implementations": [
          {
            "name": "fbThatHasSimpleTypes.FB_INIT",
            "type_name": "fbThatHasSimpleTypes.FB_INIT",
            "linkage": "Internal",
            "pou_type": {
              "Method": {
                "parent": "fbThatHasSimpleTypes",
                "property": null,
                "declaration_kind": "Concrete"
              }
            },
            "statements": [],
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 12,
                    "column": 8,
                    "offset": 220
                  },
                  "end": {
                    "line": 11,
                    "column": 22,
                    "offset": 211
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "name_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 11,
                    "column": 15,
                    "offset": 204
                  },
                  "end": {
                    "line": 11,
                    "column": 22,
                    "offset": 211
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "end_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 12,
                    "column": 8,
                    "offset": 220
                  },
                  "end": {
                    "line": 12,
                    "column": 18,
                    "offset": 230
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "overriding": false,
            "generic": false,
            "access": "Protected"
          },
          {
            "name": "fbThatHasSimpleTypes",
            "type_name": "fbThatHasSimpleTypes",
            "linkage": "Internal",
            "pou_type": "FunctionBlock",
            "statements": [],
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 13,
                    "column": 4,
                    "offset": 235
                  },
                  "end": {
                    "line": 12,
                    "column": 18,
                    "offset": 230
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "name_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 1,
                    "column": 19,
                    "offset": 20
                  },
                  "end": {
                    "line": 1,
                    "column": 39,
                    "offset": 40
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "end_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 13,
                    "column": 4,
                    "offset": 235
                  },
                  "end": {
                    "line": 13,
                    "column": 22,
                    "offset": 253
                  }
                }
              },
              "file": {
                "File": "function_blocks.pli"
              }
            },
            "overriding": false,
            "generic": false,
            "access": null
          }
        ],
        "interfaces": [],
        "user_types": [],
        "file": {
          "File": "function_blocks.pli"
        }
      }
    ]
  },
  "context": {
    "sources": {
      "function_blocks.pli": {
        "source": "\n    FUNCTION_BLOCK fbThatHasSimpleTypes\n    VAR\n        varInt : INT;\n    END_VAR\n    VAR_OUTPUT\n        outVarInt : INT;\n    END_VAR\n    VAR_IN_OUT\n        inOutVarInt : INT;\n    END_VAR\n        METHOD FB_INIT\n        END_METHOD\n    END_FUNCTION_BLOCK\n    ",
        "path": "function_blocks.pli"
      }
    },
    "provider": {
      "current_id": 3
    },
    "error_fmt": "Rich"
  }
}
