compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_8_function_blocks_with_inheritance_generated_header_file.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: "&generated_header.get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef FUNCTION_BLOCKS_WITH_INHERITANCE_H_
#define FUNCTION_BLOCKS_WITH_INHERITANCE_H_

#include <stdint.h>
#include <stdbool.h>
#include <math.h>
#include <time.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct {
    uint64_t* __vtable;
    int16_t varGreatGrandParentInt;
} fbGreatGrandParent_type;

typedef struct {
    fbGreatGrandParent_type __fbGreatGrandParent;
    int16_t varGrandParentInt;
} fbGrandParent_type;

typedef struct {
    fbGrandParent_type __fbGrandParent;
    int16_t varParentInt;
} fbParent_type;

typedef struct {
    fbParent_type __fbParent;
    int16_t varChildInt;
} fbChild_type;

void fbGreatGrandParent(fbGreatGrandParent_type* self);

void fbGrandParent(fbGrandParent_type* self);

void fbParent(fbParent_type* self);

void fbChild(fbChild_type* self);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !FUNCTION_BLOCKS_WITH_INHERITANCE_H_ */
