compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_9_programs_generated_header_file.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: "&generated_header.get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef PROGRAMS_H_
#define PROGRAMS_H_

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <time.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef enum eComplexEnumType {
    orange = 10,
    yellow = 20,
    purple = 30
} ComplexEnumType;

typedef struct {
    ComplexEnumType enumVarOne;
    ComplexEnumType enumVarTwo;
} prog_type;

extern prog_type prog_instance;

void __prog__init(prog_type* self);

void prog(prog_type* self);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !PROGRAMS_H_ */
