compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_9_programs_generated_header_file_template_data.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: "serde_json::to_string_pretty(&prepared_header_data).expect(\"Failed to serialize item!\")"
---
{
  "template_data": {
    "user_defined_types": {
      "aliases": [],
      "structs": [
        {
          "name": "prog_type",
          "variables": [
            {
              "data_type": "ComplexEnumType",
              "name": "inOutVar",
              "variable_type": "Default"
            },
            {
              "data_type": "ComplexEnumType",
              "name": "outVar",
              "variable_type": "Default"
            }
          ]
        }
      ],
      "enums": [
        {
          "name": "ComplexEnumType",
          "variables": [
            {
              "data_type": "",
              "name": "orange",
              "variable_type": {
                "Declaration": "10"
              }
            },
            {
              "data_type": "",
              "name": "yellow",
              "variable_type": {
                "Declaration": "20"
              }
            },
            {
              "data_type": "",
              "name": "purple",
              "variable_type": {
                "Declaration": "30"
              }
            }
          ]
        }
      ]
    },
    "global_variables": [
      {
        "data_type": "prog_type",
        "name": "prog_instance",
        "variable_type": "Default"
      }
    ],
    "functions": [
      {
        "return_type": "void",
        "name": "__prog__init",
        "parameters": [
          {
            "data_type": "prog_type*",
            "name": "self",
            "variable_type": "Default"
          }
        ]
      },
      {
        "return_type": "void",
        "name": "prog",
        "parameters": [
          {
            "data_type": "prog_type*",
            "name": "self",
            "variable_type": "Default"
          }
        ]
      }
    ]
  },
  "directory": "",
  "path": "programs.h",
  "file_name": "PROGRAMS"
}
